@@ -16,6 +16,9 @@
  - Fixed use of %h in dialog-tab buttons [688937].
  - Fixed printing/logging timestamps that contain invalid utf8
    [688548].
+ - Added "Resizable userlist" option.
+ - Strip colors on topic change.
+ - Fixed (snotice) and (notice) tabs being swapped [687437].
  - 
  - 
  - 
